--- a/Interfaces/cs.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/cs.lproj/EmptyTrashWarning.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Vysypat koš"; ObjectID = "5"; */
-"5.title" = "Vysypat koš";
-
-/* Class = "NSButtonCell"; title = "Vysypat koš"; ObjectID = "17"; */
+/* Class = "NSButtonCell"; title = "Empty Trash"; ObjectID = "17"; */
 "17.title" = "Vysypat koš";
 
-/* Class = "NSButtonCell"; title = "Nevysypávat"; ObjectID = "18"; */
+/* Class = "NSButtonCell"; title = "Don't Empty Trash"; ObjectID = "18"; */
 "18.title" = "Nevysypávat";
 
-/* Class = "NSTextFieldCell"; title = "V koši jsou smazané příspěvky. Chcete před ukončením programu vysypat koš?"; ObjectID = "19"; */
+/* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash. Would you like to empty the trash before quitting?"; ObjectID = "19"; */
 "19.title" = "V koši jsou smazané příspěvky. Chcete před ukončením programu vysypat koš?";
 
-/* Class = "NSButtonCell"; title = "Příště nezobrazovat"; ObjectID = "20"; */
+/* Class = "NSButtonCell"; title = "Do not show this warning again"; ObjectID = "20"; */
 "20.title" = "Příště nezobrazovat";
