--- a/Interfaces/da.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/da.lproj/EmptyTrashWarning.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Empty Trash"; ObjectID = "5"; */
-"5.title" = "Empty Trash";
-
-/* Class = "NSButtonCell"; title = "Tøm Papirkurven"; ObjectID = "17"; */
+/* Class = "NSButtonCell"; title = "Empty Trash"; ObjectID = "17"; */
 "17.title" = "Tøm Papirkurven";
 
-/* Class = "NSButtonCell"; title = "Tøm ikke Papirkurven"; ObjectID = "18"; */
+/* Class = "NSButtonCell"; title = "Don't Empty Trash"; ObjectID = "18"; */
 "18.title" = "Tøm ikke Papirkurven";
 
-/* Class = "NSTextFieldCell"; title = "Der er slettede artikler i Papirkurven.\nVil du tømme Papirkurven før du afslutter?"; ObjectID = "19"; */
+/* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash. Would you like to empty the trash before quitting?"; ObjectID = "19"; */
 "19.title" = "Der er slettede artikler i Papirkurven. Vil du tømme Papirkurven før du afslutter?";
 
-/* Class = "NSButtonCell"; title = "Vis ikke denne advarsel igen"; ObjectID = "20"; */
+/* Class = "NSButtonCell"; title = "Do not show this warning again"; ObjectID = "20"; */
 "20.title" = "Vis ikke denne advarsel igen";
