--- a/Interfaces/de.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/de.lproj/EmptyTrashWarning.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Empty Trash"; ObjectID = "5"; */
-"5.title" = "Empty Trash";
-
-/* Class = "NSButtonCell"; title = "Papierkorb leeren"; ObjectID = "17"; */
+/* Class = "NSButtonCell"; title = "Empty Trash"; ObjectID = "17"; */
 "17.title" = "Papierkorb leeren";
 
-/* Class = "NSButtonCell"; title = "Papierkorb NICHT leeren"; ObjectID = "18"; */
+/* Class = "NSButtonCell"; title = "Don't Empty Trash"; ObjectID = "18"; */
 "18.title" = "Papierkorb NICHT leeren";
 
-/* Class = "NSTextFieldCell"; title = "Es gibt noch gelöschte Artikel im Papierkorb.\nMöchten Sie den Papierkorb vor Beenden leeren?"; ObjectID = "19"; */
+/* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash. Would you like to empty the trash before quitting?"; ObjectID = "19"; */
 "19.title" = "Es gibt noch gelöschte Artikel im Papierkorb. Möchten Sie den Papierkorb vor Beenden leeren?";
 
-/* Class = "NSButtonCell"; title = "Diese Warnung nicht mehr anzeigen"; ObjectID = "20"; */
+/* Class = "NSButtonCell"; title = "Do not show this warning again"; ObjectID = "20"; */
 "20.title" = "Diese Warnung nicht mehr anzeigen";
