--- a/Interfaces/es.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/es.lproj/EmptyTrashWarning.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Vaciar papelera"; ObjectID = "5"; */
-"5.title" = "Vaciar papelera";
-
-/* Class = "NSButtonCell"; title = "Vaciar papelera"; ObjectID = "17"; */
+/* Class = "NSButtonCell"; title = "Empty Trash"; ObjectID = "17"; */
 "17.title" = "Vaciar papelera";
 
-/* Class = "NSButtonCell"; title = "No vaciar papelera"; ObjectID = "18"; */
+/* Class = "NSButtonCell"; title = "Don't Empty Trash"; ObjectID = "18"; */
 "18.title" = "No vaciar papelera";
 
-/* Class = "NSTextFieldCell"; title = "Hay artículos eliminados en la papelera.\n¿Desea vaciar la papelera antes de salir?"; ObjectID = "19"; */
+/* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash. Would you like to empty the trash before quitting?"; ObjectID = "19"; */
 "19.title" = "Hay artículos eliminados en la papelera. ¿Desea vaciar la papelera antes de salir?";
 
-/* Class = "NSButtonCell"; title = "No volver a mostrar este mensaje"; ObjectID = "20"; */
+/* Class = "NSButtonCell"; title = "Do not show this warning again"; ObjectID = "20"; */
 "20.title" = "No volver a mostrar este mensaje";
