--- a/Interfaces/eu.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/eu.lproj/EmptyTrashWarning.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Zakarrontzia Hustu"; ObjectID = "5"; */
-"5.title" = "Zakarrontzia Hustu";
-
-/* Class = "NSButtonCell"; title = "Zakarrontzia Hustu"; ObjectID = "17"; */
+/* Class = "NSButtonCell"; title = "Empty Trash"; ObjectID = "17"; */
 "17.title" = "Zakarrontzia Hustu";
 
-/* Class = "NSButtonCell"; title = "Ez hustu zakarrontzia"; ObjectID = "18"; */
+/* Class = "NSButtonCell"; title = "Don't Empty Trash"; ObjectID = "18"; */
 "18.title" = "Ez hustu zakarrontzia";
 
-/* Class = "NSTextFieldCell"; title = "Ezabatutako artikuluak zakarrontzian daude.\nIrten aurretik zakarrontzia hustu nahi al duzu?"; ObjectID = "19"; */
+/* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash. Would you like to empty the trash before quitting?"; ObjectID = "19"; */
 "19.title" = "Ezabatutako artikuluak zakarrontzian daude. Irten aurretik zakarrontzia hustu nahi al duzu?";
 
-/* Class = "NSButtonCell"; title = "Ez erakutsi ohar hau berriro"; ObjectID = "20"; */
+/* Class = "NSButtonCell"; title = "Do not show this warning again"; ObjectID = "20"; */
 "20.title" = "Ez erakutsi ohar hau berriro";
