--- a/Interfaces/pt.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/pt.lproj/EmptyTrashWarning.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Esvaziar Lixo"; ObjectID = "5"; */
-"5.title" = "Esvaziar Lixo";
-
-/* Class = "NSButtonCell"; title = "Esvaziar Lixo"; ObjectID = "17"; */
+/* Class = "NSButtonCell"; title = "Empty Trash"; ObjectID = "17"; */
 "17.title" = "Esvaziar Lixo";
 
-/* Class = "NSButtonCell"; title = "Não Esvaziar Lixo"; ObjectID = "18"; */
+/* Class = "NSButtonCell"; title = "Don't Empty Trash"; ObjectID = "18"; */
 "18.title" = "Não Esvaziar Lixo";
 
-/* Class = "NSTextFieldCell"; title = "Existem artigos apagados no lixo.\nDeseja esvaziar o lixo antes de encerrar?"; ObjectID = "19"; */
+/* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash. Would you like to empty the trash before quitting?"; ObjectID = "19"; */
 "19.title" = "Existem artigos apagados no lixo. Deseja esvaziar o lixo antes de encerrar?";
 
-/* Class = "NSButtonCell"; title = "Não voltar a mostrar este aviso"; ObjectID = "20"; */
+/* Class = "NSButtonCell"; title = "Do not show this warning again"; ObjectID = "20"; */
 "20.title" = "Não voltar a mostrar este aviso";
