--- a/Interfaces/ru.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/ru.lproj/EmptyTrashWarning.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Очистка Корзины"; ObjectID = "5"; */
-"5.title" = "Очистка Корзины";
-
-/* Class = "NSButtonCell"; title = "Очистить Корзину"; ObjectID = "17"; */
+/* Class = "NSButtonCell"; title = "Empty Trash"; ObjectID = "17"; */
 "17.title" = "Очистить Корзину";
 
-/* Class = "NSButtonCell"; title = "Не очищать"; ObjectID = "18"; */
+/* Class = "NSButtonCell"; title = "Don't Empty Trash"; ObjectID = "18"; */
 "18.title" = "Не очищать";
 
-/* Class = "NSTextFieldCell"; title = "В Корзине есть удаленные статьи.\nОчистить Корзину перед завершением работы?"; ObjectID = "19"; */
+/* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash. Would you like to empty the trash before quitting?"; ObjectID = "19"; */
 "19.title" = "В Корзине есть удаленные статьи. Очистить Корзину перед завершением работы?";
 
-/* Class = "NSButtonCell"; title = "Больше не показывать это сообщение"; ObjectID = "20"; */
+/* Class = "NSButtonCell"; title = "Do not show this warning again"; ObjectID = "20"; */
 "20.title" = "Больше не показывать это сообщение";
