--- a/Interfaces/sv.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/sv.lproj/EmptyTrashWarning.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Töm papperskorgen"; ObjectID = "5"; */
-"5.title" = "Töm papperskorgen";
-
-/* Class = "NSButtonCell"; title = "Töm papperskorgen"; ObjectID = "17"; */
+/* Class = "NSButtonCell"; title = "Empty Trash"; ObjectID = "17"; */
 "17.title" = "Töm papperskorgen";
 
-/* Class = "NSButtonCell"; title = "Töm inte papperskorgen"; ObjectID = "18"; */
+/* Class = "NSButtonCell"; title = "Don't Empty Trash"; ObjectID = "18"; */
 "18.title" = "Töm inte papperskorgen";
 
-/* Class = "NSTextFieldCell"; title = "Det finns raderade artiklar i papperskorgen.\nVill du tömma papperskorgen innan du avslutar Vienna?"; ObjectID = "19"; */
+/* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash. Would you like to empty the trash before quitting?"; ObjectID = "19"; */
 "19.title" = "Det finns raderade artiklar i papperskorgen. Vill du tömma papperskorgen innan du avslutar Vienna?";
 
-/* Class = "NSButtonCell"; title = "Visa inte denna varning igen"; ObjectID = "20"; */
+/* Class = "NSButtonCell"; title = "Do not show this warning again"; ObjectID = "20"; */
 "20.title" = "Visa inte denna varning igen";
