--- a/Interfaces/tr.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/tr.lproj/EmptyTrashWarning.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Çöp kutusunu boşalt"; ObjectID = "5"; */
-"5.title" = "Çöp kutusunu boşalt";
-
-/* Class = "NSButtonCell"; title = "Çöp kutusunu boşalt"; ObjectID = "17"; */
+/* Class = "NSButtonCell"; title = "Empty Trash"; ObjectID = "17"; */
 "17.title" = "Çöp kutusunu boşalt";
 
-/* Class = "NSButtonCell"; title = "Çöp kutusunu boşaltma"; ObjectID = "18"; */
+/* Class = "NSButtonCell"; title = "Don't Empty Trash"; ObjectID = "18"; */
 "18.title" = "Çöp kutusunu boşaltma";
 
-/* Class = "NSTextFieldCell"; title = "Çöp kutusunda silinmiş makaleler bulunuyor.\nÇıkmadan önce onları silmek ister misiniz?"; ObjectID = "19"; */
+/* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash. Would you like to empty the trash before quitting?"; ObjectID = "19"; */
 "19.title" = "Çöp kutusunda silinmiş makaleler bulunuyor. Çıkmadan önce onları silmek ister misiniz?";
 
-/* Class = "NSButtonCell"; title = "Bu uyarıyı bir daha gösterme"; ObjectID = "20"; */
+/* Class = "NSButtonCell"; title = "Do not show this warning again"; ObjectID = "20"; */
 "20.title" = "Bu uyarıyı bir daha gösterme";
