--- a/Interfaces/uk.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/uk.lproj/EmptyTrashWarning.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Спорожнити смітник"; ObjectID = "5"; */
-"5.title" = "Спорожнити смітник";
-
-/* Class = "NSButtonCell"; title = "Спорожнити смітник"; ObjectID = "17"; */
+/* Class = "NSButtonCell"; title = "Empty Trash"; ObjectID = "17"; */
 "17.title" = "Спорожнити смітник";
 
-/* Class = "NSButtonCell"; title = "Не спорожняти смітник"; ObjectID = "18"; */
+/* Class = "NSButtonCell"; title = "Don't Empty Trash"; ObjectID = "18"; */
 "18.title" = "Не спорожняти смітник";
 
-/* Class = "NSTextFieldCell"; title = "У смітнику є видалені статті.\nЧи не хотіли б ви спорожнити смітник перед тим, як завершити програму?"; ObjectID = "19"; */
+/* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash. Would you like to empty the trash before quitting?"; ObjectID = "19"; */
 "19.title" = "У смітнику є видалені статті. Чи не хотіли б ви спорожнити смітник перед тим, як завершити програму?";
 
-/* Class = "NSButtonCell"; title = "Більше не показувати це попередження"; ObjectID = "20"; */
+/* Class = "NSButtonCell"; title = "Do not show this warning again"; ObjectID = "20"; */
 "20.title" = "Більше не показувати це попередження";
