--- a/Interfaces/zh-Hant.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/zh-Hant.lproj/EmptyTrashWarning.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "清空垃圾桶"; ObjectID = "5"; */
-"5.title" = "清空垃圾桶";
-
-/* Class = "NSButtonCell"; title = "清空垃圾桶"; ObjectID = "17"; */
+/* Class = "NSButtonCell"; title = "Empty Trash"; ObjectID = "17"; */
 "17.title" = "清空垃圾桶";
 
-/* Class = "NSButtonCell"; title = "不要清空垃圾桶"; ObjectID = "18"; */
+/* Class = "NSButtonCell"; title = "Don't Empty Trash"; ObjectID = "18"; */
 "18.title" = "不要清空垃圾桶";
 
-/* Class = "NSTextFieldCell"; title = "垃圾桶中有刪除的文章。\n您是否要在結束前清空垃圾桶？"; ObjectID = "19"; */
-"19.title" = "垃圾桶中有刪除的文章。\n您是否要在結束前清空垃圾桶？";
+/* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash. Would you like to empty the trash before quitting?"; ObjectID = "19"; */
+"19.title" = "垃圾桶中有刪除的文章。您是否要在結束前清空垃圾桶？";
 
-/* Class = "NSButtonCell"; title = "不要再顯示此警告"; ObjectID = "20"; */
+/* Class = "NSButtonCell"; title = "Do not show this warning again"; ObjectID = "20"; */
 "20.title" = "不要再顯示此警告";
