--- a/Interfaces/da.lproj/GroupFolder.strings
+++ b/Interfaces/da.lproj/GroupFolder.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Panel"; ObjectID = "5"; */
-"5.title" = "Panel";
-
-/* Class = "NSTextFieldCell"; title = "Ny gruppemappe"; ObjectID = "32"; */
+/* Class = "NSTextFieldCell"; title = "New Group Folder"; ObjectID = "32"; */
 "32.title" = "Ny gruppemappe";
 
-/* Class = "NSButtonCell"; title = "Gem"; ObjectID = "34"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "34"; */
 "34.title" = "Gem";
 
-/* Class = "NSButtonCell"; title = "Afbryd"; ObjectID = "35"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "35"; */
 "35.title" = "Afbryd";
 
-/* Class = "NSTextFieldCell"; title = "Indtast navn på gruppemappe:\n"; ObjectID = "36"; */
+/* Class = "NSTextFieldCell"; title = "Enter the group folder name:"; ObjectID = "36"; */
 "36.title" = "Indtast navn på gruppemappe:";
