--- a/Interfaces/es.lproj/GroupFolder.strings
+++ b/Interfaces/es.lproj/GroupFolder.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Panel"; ObjectID = "5"; */
-"5.title" = "Panel";
-
-/* Class = "NSTextFieldCell"; title = "Nueva carpeta de grupo"; ObjectID = "32"; */
+/* Class = "NSTextFieldCell"; title = "New Group Folder"; ObjectID = "32"; */
 "32.title" = "Nueva carpeta de grupo";
 
-/* Class = "NSButtonCell"; title = "Guardar"; ObjectID = "34"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "34"; */
 "34.title" = "Guardar";
 
-/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "35"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "35"; */
 "35.title" = "Cancelar";
 
-/* Class = "NSTextFieldCell"; title = "Introduzca el nombre de la carpeta de grupo:\n"; ObjectID = "36"; */
+/* Class = "NSTextFieldCell"; title = "Enter the group folder name:"; ObjectID = "36"; */
 "36.title" = "Introduzca el nombre de la carpeta de grupo:";
