--- a/Interfaces/fr.lproj/GroupFolder.strings
+++ b/Interfaces/fr.lproj/GroupFolder.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Panneau"; ObjectID = "5"; */
-"5.title" = "Panneau";
-
-/* Class = "NSTextFieldCell"; title = "Nouveau groupe"; ObjectID = "32"; */
+/* Class = "NSTextFieldCell"; title = "New Group Folder"; ObjectID = "32"; */
 "32.title" = "Nouveau groupe";
 
-/* Class = "NSButtonCell"; title = "Créer"; ObjectID = "34"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "34"; */
 "34.title" = "Créer";
 
-/* Class = "NSButtonCell"; title = "Annuler"; ObjectID = "35"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "35"; */
 "35.title" = "Annuler";
 
-/* Class = "NSTextFieldCell"; title = "Entrer le nom du nouveau groupe :\n"; ObjectID = "36"; */
-"36.title" = "Entrer le nom du nouveau groupe :";
+/* Class = "NSTextFieldCell"; title = "Enter the group folder name:"; ObjectID = "36"; */
+"36.title" = "Entrer le nom du nouveau groupe:";
