--- a/Interfaces/it.lproj/GroupFolder.strings
+++ b/Interfaces/it.lproj/GroupFolder.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Pannello"; ObjectID = "5"; */
-"5.title" = "Pannello";
-
-/* Class = "NSTextFieldCell"; title = "Nuova Cartella Gruppo"; ObjectID = "32"; */
+/* Class = "NSTextFieldCell"; title = "New Group Folder"; ObjectID = "32"; */
 "32.title" = "Nuova Cartella Gruppo";
 
-/* Class = "NSButtonCell"; title = "Registra"; ObjectID = "34"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "34"; */
 "34.title" = "Registra";
 
-/* Class = "NSButtonCell"; title = "Annulla"; ObjectID = "35"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "35"; */
 "35.title" = "Annulla";
 
-/* Class = "NSTextFieldCell"; title = "Inserisci il nome della cartella gruppo:\n"; ObjectID = "36"; */
+/* Class = "NSTextFieldCell"; title = "Enter the group folder name:"; ObjectID = "36"; */
 "36.title" = "Inserisci il nome della cartella gruppo:";
