--- a/Interfaces/ja.lproj/GroupFolder.strings
+++ b/Interfaces/ja.lproj/GroupFolder.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "パネル"; ObjectID = "5"; */
-"5.title" = "パネル";
-
-/* Class = "NSTextFieldCell"; title = "新規グループフォルダ"; ObjectID = "32"; */
+/* Class = "NSTextFieldCell"; title = "New Group Folder"; ObjectID = "32"; */
 "32.title" = "新規グループフォルダ";
 
-/* Class = "NSButtonCell"; title = "保存"; ObjectID = "34"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "34"; */
 "34.title" = "保存";
 
-/* Class = "NSButtonCell"; title = "キャンセル"; ObjectID = "35"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "35"; */
 "35.title" = "キャンセル";
 
-/* Class = "NSTextFieldCell"; title = "グループフォルダ名を入力：\n"; ObjectID = "36"; */
+/* Class = "NSTextFieldCell"; title = "Enter the group folder name:"; ObjectID = "36"; */
 "36.title" = "グループフォルダ名を入力：";
