--- a/Interfaces/nl.lproj/GroupFolder.strings
+++ b/Interfaces/nl.lproj/GroupFolder.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Paneel"; ObjectID = "5"; */
-"5.title" = "Paneel";
-
-/* Class = "NSTextFieldCell"; title = "Nieuwe groep-map"; ObjectID = "32"; */
+/* Class = "NSTextFieldCell"; title = "New Group Folder"; ObjectID = "32"; */
 "32.title" = "Nieuwe groep-map";
 
-/* Class = "NSButtonCell"; title = "Bewaar"; ObjectID = "34"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "34"; */
 "34.title" = "Bewaar";
 
-/* Class = "NSButtonCell"; title = "Annuleer"; ObjectID = "35"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "35"; */
 "35.title" = "Annuleer";
 
-/* Class = "NSTextFieldCell"; title = "Geef de naam van de groep-map:\n"; ObjectID = "36"; */
+/* Class = "NSTextFieldCell"; title = "Enter the group folder name:"; ObjectID = "36"; */
 "36.title" = "Geef de naam van de groep-map:";
