--- a/Interfaces/de.lproj/GroupFolder.strings
+++ b/Interfaces/de.lproj/GroupFolder.strings
@@ -1,15 +1,11 @@
-
-/* Class = "NSWindow"; title = "Panel"; ObjectID = "5"; */
-"5.title" = "Panel";
-
-/* Class = "NSTextFieldCell"; title = "Neuer Gruppenordner"; ObjectID = "32"; */
+/* Class = "NSTextFieldCell"; title = "New Group Folder"; ObjectID = "32"; */
 "32.title" = "Neuer Gruppenordner";
 
-/* Class = "NSButtonCell"; title = "Erstellen"; ObjectID = "34"; */
+/* Class = "NSButtonCell"; title = "Save"; ObjectID = "34"; */
 "34.title" = "Erstellen";
 
-/* Class = "NSButtonCell"; title = "Abbrechen"; ObjectID = "35"; */
+/* Class = "NSButtonCell"; title = "Cancel"; ObjectID = "35"; */
 "35.title" = "Abbrechen";
 
-/* Class = "NSTextFieldCell"; title = "Geben Sie den Namen des Gruppenordners ein:\n"; ObjectID = "36"; */
+/* Class = "NSTextFieldCell"; title = "Enter the group folder name:"; ObjectID = "36"; */
 "36.title" = "Geben Sie den Namen des Gruppenordners ein:";
